vitrail-pg-macros/tests/ui/fail/composite_index_unknown_field.stderr
error: unknown index field `missing_field`
  --> tests/ui/fail/composite_index_unknown_field.rs:13:27
   |
13 |         @@index([post_id, missing_field])
   |                           ^^^^^^^^^^^^^
